--- a/exercicio03.css
+++ b/exercicio03.css
@@ -1,3 +1,27 @@
+body, label, input, option, select {
+  font-size: .95em !important;
+}
+
+.custom-vbottom {
+  margin-top: auto;
+  margin-bottom: 3px;
+}
+
+.custom-vcentered {
+  margin-top: auto;
+  margin-bottom: 7px;
+}
+
+.custom-add-button {
+  border-radius: 9999px !important;
+  font-size: .8em;
+}
+
+.custom-icon-label {
+  font-size: .95em;
+  vertical-align: top;
+}
+
 .custom-header {
   border-width: 1px;
   border-color: #b6cad3;
@@ -40,4 +64,20 @@
 
 input, select {
   background-color: #f9f9f9  !important;
+}
+
+input[type="radio"] {
+  margin-right: 6px !important;
+}
+
+.custom-radio-label {
+  font-size: .8em;
+}
+
+.mb-30 {
+  margin-bottom: 30px !important;
+}
+
+.mb-less {
+  margin-bottom: 0px !important;
 }
